--- a/.github/workflows/expo-publish.yml
+++ b/.github/workflows/expo-publish.yml
@@ -17,5 +17,6 @@ jobs:
           expo-version: 4.x
           username: ${{ secrets.EXPO_CLI_USERNAME }}
           password: ${{ secrets.EXPO_CLI_PASSWORD }}
+      - run : expo login --username ${{secrets.EXPO_CLI_USERNAME}} --password ${{secrets.EXPO_CLI_PASSWORD}}
       - run: yarn install
       - run: expo publish
